# beet

./: .clang_format  .gitignore  CMakeLists.txt  compile_commands.json
.githooks/: precommit
cmake/: warnings.cmake
compiler/stage0-c/include/beet/codegen/: codegen.h
compiler/stage0-c/include/beet/compiler/: api.h
compiler/stage0-c/include/beet/diag/: diag.h
compiler/stage0-c/include/beet/lexer/: lexer.h  token.h
compiler/stage0-c/include/beet/mir/: mir.h
compiler/stage0-c/include/beet/parser/: ast.h  parser.h
compiler/stage0-c/include/beet/resolve/: scope.h
compiler/stage0-c/include/beet/semantics/: registry.h
compiler/stage0-c/include/beet/support/: intern.h  source.h
compiler/stage0-c/include/beet/types/: check.h  types.h
compiler/stage0-c/src/: main.c
compiler/stage0-c/src/codegen/: codegen.c
compiler/stage0-c/src/diag/: diag.c
compiler/stage0-c/src/lexer/: lexer.c
compiler/stage0-c/src/mir/: mir.c
compiler/stage0-c/src/parser/: parser.c
compiler/stage0-c/src/resolve/: scope.c
compiler/stage0-c/src/semantics/: registry.c
compiler/stage0-c/src/support/: intern.c  source.c
compiler/stage0-c/src/types/: check.c  types.c
docs/: architecture.md  benchmarking.md  commit_map.md  decisions.md  language.md
docs/benchmarks/: latest.json
examples/: accumulate_to_six.beet  count_to_three.beet  return_arithmetic.beet  return_bound_local.beet  return_bound_point_field.beet  return_called_function.beet  return_decision_else.beet  return_decision_then.beet  return_if_true.beet  return_option_some.beet  return_outcome_error.beet  return_point_field.beet  return_recursive_count.beet  return_seven.beet  return_while_true.beet  return_zero.beet
runtime/vm/include/beet/vm/: api.h  bytecode.h  interpreter.h
runtime/vm/src/: bytecode.c  interpreter.c  main.c
tests/: codegen_bytecode.c  diag_print.c  lexer_tokens.c  mir_lowering.c  parser_binding.c  parser_function.c  parser_module.c  parser_type_decl.c  resolve_scope.c  semantic_registry.c  smoke_compiler.c  smoke_vm.c  source_file.c  types_check.c  vm_execution.c
tools/dev/: bench_frontend.c  compare_benchmarks.py  install_hooks.sh  run_benchmarks.sh  run_checks.sh
